--- a/css/reviews.css
+++ b/css/reviews.css
@@ -1,3 +1,5 @@
+
+
 .reviews{
     margin-top: 40px;
 }
@@ -121,7 +123,25 @@
     height: 86px;
 }
 
-/* RESPONSIVE */
+.button--large a{
+    text-decoration: none;
+    color: inherit;
+}
+.button--large a:hover{
+    color: inherit;
+    text-decoration: none;
+}
+
+.vacancies__title{
+    padding-top: 20px;
+}
+
+.crumbs__list{
+    padding-bottom: 30px;
+}
+
+
+
 @media (max-width: 900px) {
   .reviews__layout {
     grid-template-columns: 1fr;
