--- a/css/styles.css
+++ b/css/styles.css
@@ -117,6 +117,12 @@ html body .template__section .container .content p>img{
     display: none;
 }
 
+.news{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
+
 @media (max-width: 768px) {
 	.modal__header, .form__desc {
 		display: none;
